# hookverify-cli

./: README.md  requirements.txt
.github/workflows/: build.yml
hookverify_cli/: .gitignore  __init__.py  config.py  listener.py  main.py  pyproject.toml
hookverify_cli/.github/workflows/: build.yml
